[package]
name = "rustfst"
version = "0.1.8-alpha.0"
authors = ["Alexandre Caulier<alexandre.caulier@protonmail.com>"]
description = "Library for Weighted Finite States Transducers as decribed by Mohri and Allauzen"
license = "MIT/Apache-2.0"
keywords = ["FST", "wFST"]
documentation = "https://docs.rs/rustfst"
repository = "https://github.com/Garvys/rustfst"
readme = "README.md"

[dependencies]
failure = "0.1"
itertools = "0.7"
nom = "4.1"

[dev-dependencies]
counter = "0.4"
rand = "0.5"
