[package]
name = 'rustfst'
version = '0.1.8-alpha.0'
authors = ['Alexandre Caulier<alexandre.caulier@protonmail.com>']
description = 'Library for Weighted Finite States Transducers as decribed by Mohri and Allauzen'
documentation = 'https://docs.rs/rustfst'
readme = 'README.md'
keywords = [
    'FST',
    'wFST',
    'graph',
    'automata',
    'transducer',
    'acceptor',
    'path',
    'shortest-path',
    'data-structures',
    'finite-states-transducer',
]
license = 'MIT/Apache-2.0'
repository = 'https://github.com/Garvys/rustfst'
edition = '2018'

[dependencies]
failure = '0.1'
itertools = '0.7'
nom = '4.1'

[dev-dependencies]
counter = '0.4'
rand = '0.5'
serde = '1.0'
serde_derive = '1.0'
serde_json = '1.0'
