[package]
name = "rustfst-ffi"
version = "0.9.1-alpha.0"
authors = ["Emrick Sinitambirivoutin <emrick.sinitambirivoutin@sonos.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
libc = "0.2"
ffi-convert = "0.5"
rustfst = { path = "../rustfst"}