[package]
name = "rustfst-ffi"
version = "0.9.1-alpha.9"
authors = ["Emrick Sinitambirivoutin <emrick.sinitambirivoutin@sonos.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustfst-state-label-u32"]
rustfst-state-label-u32 = ["rustfst/state-label-u32"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
libc = "0.2"
ffi-convert = "0.5"
rustfst = { path = "../rustfst"}
downcast-rs = "1.2.0"