[package]
name = "rustfst-ffi"
version = "1.0.0"
authors = [
    "Emrick Sinitambirivoutin <emrick.sinitambirivoutin@sonos.com>",
    "Alexandre Caulier <alexandre.caulier@protonmail.com>"
]
license = 'MIT/Apache-2.0'
repository = 'https://github.com/Garvys/rustfst'
edition = "2018"
description = 'Library for constructing, combining, optimizing, and searching weighted finite-state transducers (FSTs). Rustfst-ffi provides C interfaces of the Rust library'
documentation = 'https://docs.rs/rustfst'
readme = '../README.md'
keywords = [
    'FST',
    'graph',
    'transducer',
    'acceptor',
    'ffi'
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustfst-state-label-u32"]
rustfst-state-label-u32 = ["rustfst/state-label-u32"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
libc = "0.2"
ffi-convert = "0.5"
# Used locally when developping and used the one from crates.io when publishing
rustfst = { path = "../rustfst", version = "=1.0.0" }
downcast-rs = "1.2.0"