[package]
name = "rustfst-images-doc"
version = "0.1.0"
authors = ["Alexandre Caulier <alexandre.caulier@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = '0.1'
rustfst = {path = "../rustfst"}
