[build-system]
requires = ["setuptools>=61.0", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "rustfst-python"
version = "1.2.6"
description = "Python bindings for RustFST"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Alexandre Caulier", email = "alexandre.caulier.a@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]
dependencies = [
    "patchelf>=0.17; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.7.0"
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.0.0",
    "mkdocs-macros-plugin>=1.3.7",
    "mike>=1.1.0",
    "mkdocs-autorefs>=0.4.0",
    "mkdocstrings[python]>=0.19.0",
    "mkdocs-section-index>=0.3.5"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["rustfst*"]

[tool.setuptools.package-data]
rustfst = ["py.typed"]

[[tool.setuptools-rust.ext-modules]]
target = "rustfst._rustfst_python"
path = "../rustfst-ffi/Cargo.toml"
binding = "NoBinding"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
