[package]
name = 'rustfst'
version = "0.6.3"
authors = ['Alexandre Caulier<alexandre.caulier@protonmail.com>']
description = 'Library for constructing, combining, optimizing, and searching weighted finite-state transducers (FSTs).'
documentation = 'https://docs.rs/rustfst'
readme = '../README.md'
keywords = [
    'FST',
    'graph',
    'transducer',
    'acceptor',
    'shortest-path',
]
license = 'MIT/Apache-2.0'
repository = 'https://github.com/Garvys/rustfst'
edition = '2018'

[dependencies]
anyhow = '1'
bimap = '0.3'
binary-heap-plus = '0.1'
bitflags = '1'
generic-array = '0.12'
itertools = '0.9'
nom = '5'
num-traits = '0.2'
ordered-float = '1'
serde = { version = '1', features = ['derive'] }
stable_bst = '0.2'
superslice ='1'
typenum = '1.10'
unsafe_unwrap = '0.1'

[dev-dependencies]
counter = '0.4'
rand = '0.5'
serde_json = '1.0'
tempfile = '3.0'
path_abs = '0.5'
pretty_assertions = "0.6.1"
proptest = "0.9.4"
doc-comment = "0.3.1"
