[package]
name = 'rustfst'
version = "1.3.1"
authors = ['Alexandre Caulier<alexandre.caulier@protonmail.com>']
description = 'Library for constructing, combining, optimizing, and searching weighted finite-state transducers (FSTs).'
documentation = 'https://docs.rs/rustfst'
readme = '../README.md'
keywords = [
    'FST',
    'graph',
    'transducer',
    'acceptor',
    'shortest-path',
]
license = 'MIT/Apache-2.0'
repository = 'https://github.com/Garvys/rustfst'
edition = '2018'

[features]
default = ["state-label-u32"]
state-label-u32 = []

[dependencies]
anyhow = '1'
bimap = '0.6'
bitflags = '2.5'
generic-array = '1'
itertools = '0.14'
nom = '7'
num-traits = '0.2'
ordered-float = '5'
rand = '0.9'
rand_chacha = '0.9'
serde = { version = '1', features = ['derive'] }
superslice = '1'

[dev-dependencies]
counter = '0.7'
serde_json = '1.0'
tempfile = '3.0'
path_abs = '0.5'
pretty_assertions = '1'
proptest = '1'
doc-comment = "0.3.1"
